Fix image issue

--- a/outreach.html
+++ b/outreach.html
@@ -39,7 +39,7 @@
 					description: ""
 				},
 				"Mississippi Alliance for Women in Computing": {
-					image: "mafwic.png",
+					image: "mawic.png",
 					website: "https://www.msawc.org/",
 					description: ""
 				},
