--- a/slides/index.html
+++ b/slides/index.html
@@ -32,11 +32,10 @@
 		
 		<div id="footer">
 			<div id="general">
-				<a id="name" href="index.html"> Sarah Darrow </a>
-				<a id="resume" href="resume.pdf"> Resume </a>
+				<a id="name" href="../index.html"> Sarah Darrow </a>
+				<a id="resume" href="../resume.pdf"> Resume </a>
 			</div>
-			
-			<a id="link" href="outreach.html"> Teaching <span class="upper">PEOPLE</span> About <span class="upper">COMPUTERS</span> &#9654 </a>
+
 		</div>
 		
 	</body>
