Fixed linkedin link

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ long findTour(int size, struct point start, int spotNum, long visited, int moveM
 			<div id="links">
 				<a href="https://www.github.com/SEDarrow" class="title-link"> Github </a>
 				<a href="resume.pdf" class="title-link"> Resume </a>
-				<a href="htps://www.linkedin.com/in/sarahdarrow" class="title-link"> LinkedIn </a>
+				<a href="https://www.linkedin.com/in/sarahdarrow" class="title-link"> LinkedIn </a>
 			</div>
 			<div id="icons">
 				<img class="icon" src="question-mark.png" alt="About Me" onclick="show()">
